--- a/misc/planering.html
+++ b/misc/planering.html
@@ -19,11 +19,11 @@
 </head>
 <body>
 
-    <h1>Dokumentation projekt Vt</h1>
+    <h1>Dokumentation projekt Vt20</h1>
 
     <h2>1. Idébeskrivning</h2>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
-
+    En planerings hemsida där man kan lokalt lägga in deadlines och att göra listor. Målgruppen är alla som vill planera sitt liv. Det kan vara studenter som vill ha överblick över läxor, eller arbetande som vill ha en lokal planering tillgänglig på en hemsida. Det kommer göras med hjälp av cookies då jag ännu inte vet hur man bygger dynamiska sidor. Med cookies blir det en hybrid. Inspiration tas från Trello.com där man kan göra visuella listor på vad man ska göra, gör, och har gjort eller vilken typ av lista som helst. Den största utmaningen kommer alltså bli funktionaliteten på listorna och sortering av lokal data. 
     <h2>2. Planering</h2>
 
     <h3>2.1 Handskiss</h3>
@@ -41,9 +41,11 @@
             <td>4</td>
             <td>
             <!-- Vad görs på lektionen vecka 4? -->
+            Brainstorma idéer, skissa och undersök hur andra sådana sidor ser ut.
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 4? -->
+            Fortsätta skissa och komma på idéer för funktionalitet.
             </td>
         </tr>
 
@@ -51,9 +53,13 @@
             <td>5</td>
             <td>
             <!-- Vad görs på lektionen vecka 5? -->
+            Fråga Leo om man får styla planering.html så att det ser lite trevligare ut att läsa. 
+            Skissa mobil samt desktop layout.
+            (Pappersprototyp-ish)
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 5? -->
+            Undersök hur man implementerar cookies
             </td>
         </tr>
 
@@ -61,9 +67,11 @@
             <td>6</td>
             <td>
             <!-- Vad görs på lektionen vecka 6? -->
+            Börja koda block-strukturen för hemsidan.
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 6? -->
+            Kom på hur cookies bör användas i min hemsida
             </td>
         </tr>
 
@@ -71,6 +79,7 @@
             <td>7</td>
             <td>
             <!-- Vad görs på lektionen vecka 7? -->
+
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 7? -->
@@ -135,6 +144,7 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
+    Jag har kommit på vilken slags hemsida jag ska skapa. Och har börjat skissa layouten för olika stora skärmar. Det svåra under denna lektion var att komma på vad jag skulle ta mig an som inte var tråkigt och som skulle kunna utmana mig. Då jag hållit på en del med statiska sidor av olika typer var det svårt att komma på något som intresserade mig. Det som hjälpte var att diskutera med klasskamrater och framför allt läraren (Emil Wilbas) vilket tillslut gav mig inspiration. En större del av lektionen hade passerat när jag väl valt vad jag ville göra så jag han tyvärr inte med mycket mer. (Jag skriver detta lite senare på dagen) Till nästa lektion kommer jag att ha en mental plan på vad jag ska göra; vilket förhoppningsvis gör att jag kan vara mer produktiv än vad jag var idag. 
 
     <h3>Lektion vecka 5</h3>
     <!-- Fyll på med dokumentation här. -->
