--- a/misc/planering.html
+++ b/misc/planering.html
@@ -136,10 +136,11 @@
                 <td>7</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 7? -->
-
+                    Bygg upp listskapandet
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 7? -->
+                    Fortsätt på det du inte hinner med på lektion.
                 </td>
             </tr>
 
@@ -147,9 +148,11 @@
                 <td>8</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 8? -->
+                    Fixa så att sidan visar listor baserat på sparad data
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 8? -->
+                    Fortsätt på utseendet.
                 </td>
             </tr>
 
@@ -157,6 +160,8 @@
                 <td>9</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 9? -->
+                    Lägg till bild-spel och extra för betyg ;)
+                    Lägg till mer documentation i alla css och javascript
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 9? -->
@@ -218,7 +223,8 @@
         <h3>Lektion vecka 5</h3>
         <!-- Fyll på med dokumentation här. -->
         <p>Idag har jag främst undersökt hur man hanterar lokalt sparad data. Bland annat hur man sparar och tar fram
-            sparad data och hur man kan spara flera olika värden på ett effektivt sätt och jag har även skissat lite mer.
+            sparad data och hur man kan spara flera olika värden på ett effektivt sätt och jag har även skissat lite
+            mer.
             Har lagt upp en skiss men jag glömde min förra skiss hemma så den får jag lägga in bild på lite senare. Jag
             har även börjat planera vilken data jag kommer att spara och hur jag ska strukturera det. Det svåra just nu
             är att hitta ett bra sätt för hur jag ska göra det möjligt att skapa så många listor man vill. Bör kanske ha
@@ -226,25 +232,39 @@
             princip allt man kan göra på min sida ska vara tillgängligt på index.html listorna kommer alltså att finnas
             bredvid varandra men man kolla bara på en åt gången. Och om man inte sparat något data ska det inte finnas
             massa tomma listor att scrolla mellan. Det ska inte finnas något mer än kanske en skapa lista knapp och
-            något mer. </p> 
-            <p>Till nästa lektion tänker jag att jag ska börja skriva ett test program på hur jag sparar och visar data och vad jag ska visa om det inte finns någon sparad data.</p>
+            något mer. </p>
+        <p>Till nästa lektion tänker jag att jag ska börja skriva ett test program på hur jag sparar och visar data och
+            vad jag ska visa om det inte finns någon sparad data.</p>
         <h3>Lektion vecka 6</h3>
         <!-- Fyll på med dokumentation här. -->
-
+        <p>Idag har jag först ändrat utseendet/färgvalet för min sida och sedan jobbat på functionaliteten. Har börjat
+            få till en function som skapar en nu sak men hade lite problem med att lägga till det i rätt del av html
+            documentet. Fick till det till slut så allt funkar hittills som det ska. Kommer dock behöva ändra lite
+            framöver då jag fixar till det så att man kan skapa flera listor. Det främsta problemet jag hade idag var
+            att förstå mitt css dokument då jag hade glömt lägga till kommentarer som förklarar vad jag ändrar utseende
+            på. Det gjorde att jag behövde lägga mer tid på att hitta var jag skulle göra ändringar än vad jag har
+            tänkt. Jag la därför till en del kommentarer. Förutom det ändrade jag även en större del av färger till
+            variabler om de skulle användas ett flertal gånger i documentet så att det blir lättare att ändra färgvalet
+            på sidan. Det hjälper mycket till en potentiell färg ändrings funktion. </p>
+        <p>Nästa lektion är efter lovet och jag tänker att jag ska jobba på funktionaliteten utanför lektionen då jag
+            vill ha till att fyll sidan med mer. Förhoppningsvis blir jag
+            färdig med en större del av funkktionaliteten. Men om jag inte blir färdig kommer jag fortsätta på lektionen.
+        </p>
         <h3>Lektion vecka 8</h3>
         <!-- Fyll på med dokumentation här. -->
-
+        <p></p>
         <h3>Lektion vecka 9</h3>
         <!-- Fyll på med dokumentation här. -->
-
+        <p></p>
         <h3>Lektion vecka 10</h3>
         <!-- Fyll på med dokumentation här. -->
-
+        <p></p>
         <h3>Lektion vecka 11</h3>
         <!-- Fyll på med dokumentation här. -->
-
+        <p></p>
         <h3>Lektion vecka 12</h3>
         <!-- Fyll på med dokumentation här. -->
+        <p></p>
     </section>
 
     <section class="neomorph">
