--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
 <!--todo-->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/baseStyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2d32821283.js" crossorigin="anonymous"></script>
+    <title>List by Blueserpent</title>
+</head>
+
+<body>
+    <section class="pageContainer">
+        <section class="header">
+            <section class="logo">
+                <p>LISTY</p>
+                <div class="clear">
+                    <i class="delete fas fa-user-times fa-2x"></i>
+                </div>
+            </section>
+            <section class="quickmenu">
+                <a href="#!">
+                    <div class="home">
+                        <i class="fas fa-home"></i>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="not-current-list">
+                        <i class="fa fa-circle-thin fa-2x"></i>
+                    </div>
+                </a>
+            </section>
+        </section>
+        <section class="content">
+            <section class="list">
+                <div class="listTitle">
+                    <p>List Name</p>
+                </div>
+                <ul>
+                    <li id="listItem" class="listItem checked">
+                        <div class="checkmark">
+                            <i class="fa fa-check-circle complete"></i>
+                        </div>
+                        <div class="title">
+                            <p>Item Name</p>
+                        </div>
+                        <div class="deleteItem">
+                            <i class="fas fa-minus-square "></i>
+                        </div>
+                        <div class="description">
+                            <p>Description</p>
+                        </div>
+                        <div class="deadline">
+                            <p>Due date: xx-x-xxxx, x days left</p>
+                        </div>
+                    </li>
+                </ul>
+                <div class="add-item">
+                    <label for="item-input"><i class="fas fa-plus-circle fa-2x" aria-hidden="true"></i></label>
+                    
+                    <input class="item-input" type="text" id="item-input" placeholder="Add a list item">
+                </div>
+            </section>
+        </section>
+    </section>
+    <script src="js/test.js"></script>
+</body>
+
+</html>
