--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="quickmenu">
                 <a href="#!">
                     <div class="home">
-                        <i class="fas fa-home"></i>
+                        <i class="fas fa-home fa-2x"></i>
                     </div>
                 </a>
                 <a href="">
@@ -41,6 +41,7 @@
                     <p>List Name</p>
                 </div>
                 <ul>
+                    <!--
                     <li id="listItem" class="listItem checked">
                         <div class="checkmark">
                             <i class="fa fa-check-circle complete"></i>
@@ -56,6 +57,18 @@
                         </div>
                         <div class="deadline">
                             <p>Due date: xx-x-xxxx, x days left</p>
+                        </div>
+                    </li>
+                    -->
+                    <li id="listItem" class="listItem">
+                        <div class="checkmark">
+                            <i class="fa fa-circle-thin complete"></i>
+                        </div>
+                        <div class="title">
+                            <p>Item Name</p>
+                        </div>
+                        <div class="deleteItem">
+                            <i class="fas fa-minus-square "></i>
                         </div>
                     </li>
                 </ul>
