--- a/misc/planering.html
+++ b/misc/planering.html
@@ -148,11 +148,11 @@
                 <td>8</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 8? -->
-                    Fixa så att sidan visar listor baserat på sparad data
+                    Bygg upp listskapandet
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 8? -->
-                    Fortsätt på utseendet.
+                    Fortsätt på det du inte hinner med på lektionen
                 </td>
             </tr>
 
@@ -160,17 +160,19 @@
                 <td>9</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 9? -->
-                    Lägg till bild-spel och extra för betyg ;)
-                    Lägg till mer documentation i alla css och javascript
+                    Fixa så att sidan visar listor baserat på sparad data
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 9? -->
+                    Fortsätt på utseendet.
                 </td>
             </tr>
 
             <tr>
                 <td>10</td>
                 <td>
+                    Lägg till bild-spel och extra för betyg ;)
+                    Lägg till mer documentation i alla css och javascript
                     <!-- Vad görs på lektionen vecka 10? -->
                 </td>
                 <td>
@@ -248,11 +250,18 @@
             på sidan. Det hjälper mycket till en potentiell färg ändrings funktion. </p>
         <p>Nästa lektion är efter lovet och jag tänker att jag ska jobba på funktionaliteten utanför lektionen då jag
             vill ha till att fyll sidan med mer. Förhoppningsvis blir jag
-            färdig med en större del av funkktionaliteten. Men om jag inte blir färdig kommer jag fortsätta på lektionen.
+            färdig med en större del av funkktionaliteten. Men om jag inte blir färdig kommer jag fortsätta på
+            lektionen.
         </p>
         <h3>Lektion vecka 8</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p></p>
+        <p>Under denna lektion har jag suttit med funktionaliteten med localstorage. Har testat flera olika sätt som jag
+            kan strukturera upp datan jag vill spara och har bestämt mig för ett sätt. Jag kommer spara en lista som
+            innehåller alla listor. Tyvärr har inte jag kunnat koncentrera mig så bra som jag hade velat och inte fått
+            gjort allt jag hade tänkt. Det har varit en rätt högljudnivå i klassrummet vilket gjort det svårt att tänka.
+            Speciellt då det jag håller på med är helt nytt för mig och det tar ett tag att förstå hur allt fungerar.
+            Till nästa lektion vill jag ha fått till en större del av samarbetet mellan back-end och front-end så att
+            jag kan potentiellt lägga till mer info om varje list-element. </p>
         <h3>Lektion vecka 9</h3>
         <!-- Fyll på med dokumentation här. -->
         <p></p>
