extra off lesson

--- a/index.html
+++ b/index.html
@@ -28,15 +28,23 @@
                         <i class="fas fa-home fa-2x"></i>
                     </div>
                 </a>
-                <a href="">
-                    <div class="not-current-list">
+                <a href="#list-1">
+                    <div class="current-list">
                         <i class="fa fa-circle-thin fa-2x"></i>
                     </div>
                 </a>
             </section>
         </section>
         <section class="content">
-            <section class="list">
+            <section class="frontpage">
+                <section class="frontimg">
+                    <img src="img/blue-keyboard.jpg" alt="">
+                </section>
+                <section class="create-list-box">
+                    <button>NEW LIST!</button>
+                </section>
+            </section>
+            <section id="list-1" class="list">
                 <div class="listTitle">
                     <p>List Name</p>
                 </div>
