refactored some javascript code

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
                     <img src="img/blue-keyboard.jpg" alt="">
                 </section>
                 <section class="create-list-box">
-                    <button>NEW LIST!</button>
+                    <button class="newListButton">
+                        NEW LIST!
+                    </button>
+                    <button class="newListButton">
+                            NEW LIST!
+                        </button>
                 </section>
             </section>
             <section id="list-1" class="list">
