--- a/misc/planering.html
+++ b/misc/planering.html
@@ -264,7 +264,7 @@
             jag kan potentiellt lägga till mer info om varje list-element. </p>
         <h3>Lektion vecka 9</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p></p>
+        <p>Idag har jag arbetat framför allt med att få till funktionaliteten på sidan för listskapandet. Jag satt i korridoren utanför biblioteket och jobbade då jag inte kunde koncentrera mig på lektionen. Hade lite problem med att iterera genom listor som skulle tömmas men fick till det tillslut. Jag har nu märkt att det inte är jättelång tid kvar tills allt ska vara färdigt och tänker därför lägga ner mer tid hemma på att få till saker. Framförallt att fylla sidan med information och bilder. Tänker mig att jag ska han en del som förklarar hur listskapandet fungerar. Nästa lektion tänker jag alltså lägga tid på sidans utseende och information. </p>
         <h3>Lektion vecka 10</h3>
         <!-- Fyll på med dokumentation här. -->
         <p></p>
