--- a/misc/planering.html
+++ b/misc/planering.html
@@ -264,10 +264,25 @@
             jag kan potentiellt lägga till mer info om varje list-element. </p>
         <h3>Lektion vecka 9</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p>Idag har jag arbetat framför allt med att få till funktionaliteten på sidan för listskapandet. Jag satt i korridoren utanför biblioteket och jobbade då jag inte kunde koncentrera mig på lektionen. Hade lite problem med att iterera genom listor som skulle tömmas men fick till det tillslut. Jag har nu märkt att det inte är jättelång tid kvar tills allt ska vara färdigt och tänker därför lägga ner mer tid hemma på att få till saker. Framförallt att fylla sidan med information och bilder. Tänker mig att jag ska han en del som förklarar hur listskapandet fungerar. Nästa lektion tänker jag alltså lägga tid på sidans utseende och information. </p>
+        <p>Idag har jag arbetat framför allt med att få till funktionaliteten på sidan för listskapandet. Jag satt i
+            korridoren utanför biblioteket och jobbade då jag inte kunde koncentrera mig på lektionen. Hade lite problem
+            med att iterera genom listor som skulle tömmas men fick till det tillslut. Jag har nu märkt att det inte är
+            jättelång tid kvar tills allt ska vara färdigt och tänker därför lägga ner mer tid hemma på att få till
+            saker. Framförallt att fylla sidan med information och bilder. Tänker mig att jag ska han en del som
+            förklarar hur listskapandet fungerar. Nästa lektion tänker jag alltså lägga tid på sidans utseende och
+            information. </p>
         <h3>Lektion vecka 10</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p></p>
+        <p>Likt förra veckan har jag idag suttit med funktionaliteten för sidan. Framför allt att börja använda
+            eventlisteners. Men innan det gjorde jag färdigt ta bort funktioner som ska ta bort specifika listor eller
+            saker i listor. Jag fick problem med att få tag på rätt element i DOM documentet men tack vare att jag
+            använde console.log kunde jag se i hemsidans console vilket jag var på. När jag kom på att jag kunde använda
+            console.log gick det mycket bättre. Jag sitter dock just nu med ett liknande problem då jag håller på med
+            eventlisteners. För på min sida måste jag ha funktioner som körs både när sidan laddar första gången och när
+            listor/saker läggs till. Då behöver jag komma åt rätt information för att sätta eventlisteners på rätt
+            objekt, vilket jag har lite problem med. Till nästa lektion vill jag ha fått färdigt alla eventlisteners så
+            att jag kan börja lägga till mer data så som bilder och texter för att visa på en högre nivå av kunskap.
+            Förhoppningsvis har jag inte lagt ner för mycket tid på funktionaliteten.</p>
         <h3>Lektion vecka 11</h3>
         <!-- Fyll på med dokumentation här. -->
         <p></p>
