More javascript, eventlisteners
added addlist and list item functionality

--- a/misc/planering.html
+++ b/misc/planering.html
@@ -171,12 +171,12 @@
             <tr>
                 <td>10</td>
                 <td>
-                    Lägg till bild-spel och extra för betyg ;)
-                    Lägg till mer documentation i alla css och javascript
+                    Fixa så att det går att lägga till och ta bort listor och punkter
                     <!-- Vad görs på lektionen vecka 10? -->
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 10? -->
+                    Hitta/Fixa buggar och fortsätt med det jag inte han med på lektionen
                 </td>
             </tr>
 
@@ -184,9 +184,12 @@
                 <td>11</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 11? -->
+                    Lägg till info/hjälp pop-up med bilder och extra för betyg ;)
+                    Lägg till mer documentation i alla css och javascript
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 11? -->
+                    Finslipa och gör en desktop version
                 </td>
             </tr>
 
@@ -199,7 +202,6 @@
                     <!-- Vad görs utanför lektionen vecka 12? -->
                 </td>
             </tr>
-
         </table>
     </section>
 
