--- a/index.html
+++ b/index.html
@@ -15,26 +15,30 @@
     <section class="pageContainer">
         <section class="header">
             <section class="logo">
+                <div class="info-button">
+                    <i class="far fa-question-circle fa-2x"></i>
+                </div>
                 <p>LISTY</p>
                 <div class="clear">
-                    <i class="delete fas fa-user-times fa-2x"></i>
+                    <i class="delete fas fa-trash fa-2x"></i>
                 </div>
             </section>
             <section class="quickmenu">
-                <a href="#!">
+                <a href="#frontpage" class="active">
                     <div class="home">
                         <i class="fas fa-home fa-2x"></i>
                     </div>
                 </a>
-                <a href="#list-1">
-                    <div class="current-list">
-                        <i class="fa fa-circle-thin fa-2x"></i>
-                    </div>
-                </a>
+            </section>
+            <div class="addlist-plus">
+                <i class="fas fa-plus fa-2x"></i>
+            </div>
+            <section class="info">
+
             </section>
         </section>
         <section class="content">
-            <section class="frontpage">
+            <section id="frontpage"class="frontpage">
                 <section class="frontimg">
                     <img src="img/blue-keyboard.jpg" alt="">
                 </section>
@@ -45,6 +49,14 @@
                 </section>
             </section>
         </section>
+        <section class="newlist-popup closed">
+            <div class="add-list">
+                <i class="fas fa-window-close fa-2x"></i>
+                <i class="fas fa-plus-circle fa-2x" aria-hidden="true"></i>
+                <input class="item-input" type="text" placeholder="Add a list!">
+            </div>
+        </section>
+        
     </section>
     <script src="js/test.js"></script>
 </body>
